# kb-network

./: .gitignore  CHANGELOG.md  build.py  pyproject.toml
.github/workflows/: test-and-release.yml
desktop/: index.html  main.js  package-lock.json  package.json  preload.js  tailwind.config.js  vite.config.js
desktop/src/: App.jsx  index.css
src/kb_network/: __init__.py  cli.py  db.py  server.py
tests/: test_server.py
