[project]
name = "kb-network"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "WIll Morris", email = "88165849+Willmo103@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "kb-core",
]

[project.scripts]
kb-network-agent = "kb_network:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
kb-core = { git = "https://github.com/willmo103/kb-core.git" }
